# bill-splitter

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: main.py
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: bill.py  health.py  outing.py
backend/app/core/: settings.py
backend/app/schemas/: bill.py  outing.py
backend/app/services/: bill.py  gemini.py  litellm_service.py  outing.py
backend/scripts/: start.sh
backend/tests/: conftest.py
backend/tests/api/v1/: conftest.py  test_bill_api_v1.py  test_health_api_v1.py  test_outing_api_v1.py
backend/tests/examples/: __init__.py  simple_with_tax_and_service_charge.py
backend/tests/services/: test_bill_service.py  test_gemini_service.py  test_litellm_service.py  test_outing_service.py
frontend/: .env.example  Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package.json  tailwind.config.js  vite-env.d.ts  vite.config.js  vite.config.ts
frontend/public/: index.html
frontend/src/: App.tsx  index.css
frontend/src/api/: api.ts
frontend/src/components/: BillCard.jsx  BillForm.tsx  BillList.tsx  BillModal.jsx  BillSplitter.jsx  EmptyState.jsx  ItemForm.jsx  ItemForm.tsx  Layouts.tsx  PaymentPlanCard.jsx  PaymentPlans.tsx  PaymentPlansView.jsx  PwaInstallPrompt.tsx  PwaUpdatePrompt.tsx  ThemeExample.tsx
frontend/src/context/: ThemeContext.tsx
frontend/src/hooks/: useAppState.ts  useInstallPrompt.ts
frontend/src/styles/: App.css
frontend/src/types/: schema.ts
frontend/src/utils/: api.js
