[project]
name = "bill-splitter"
version = "0.1.0"
description = "A small utility to split bills amongst friends"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Kshitish Deshpande", email = "me@ksdfg.dev" }
]

dependencies = [
    "fastapi[all]>=0.135.3",
    "google-genai>=1.72.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.10",
    "ty>=0.0.1a32",
]

[tool.ruff]
line-length = 120
exclude = ["__init__.py"]

[tool.pytest.ini_options]
pythonpath = "."
