[project]
name = "bill-splitter"
version = "0.1.0"
description = "A small utility to split bills amongst friends"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Kshitish Deshpande", email = "me@ksdfg.dev" }
]

dependencies = [
    "fastapi[all]>=0.136.0",
    "google-genai>=1.73.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.11",
    "ty>=0.0.32",
]

[tool.ruff]
line-length = 120
exclude = ["__init__.py"]

[tool.pytest.ini_options]
pythonpath = "."
